--- a/package.json
+++ b/package.json
@@ -1,39 +1,29 @@
 {
-  "name": "bitandbang",
-  "version": "1.3.0",
-  "description": "A personal card for Tierney Cyren (@bitandbang)",
-  "main": "/bin/card.js",
+  "name": "@sebastienbarre/card",
+  "version": "1.0.0",
+  "description": "A personal card for Sebastien Barre",
+  "main": "index.js",
   "bin": {
-    "bitandbang": "./bin/card.js"
+    "sebastienbarre-card": "./bin/index.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bnb/bitandbang.git"
+    "url": "https://github.com/sebastienbarre/card.git"
   },
   "scripts": {
-    "prepublish": "npm run build",
-    "build": "node build.js",
-    "dev": "npm run build && node ./bin/card.js",
-    "lint": "standard",
+    "card": "./bin/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "card",
-    "npm",
     "npm card",
-    "npx",
     "npx card",
     "business card"
   ],
-  "author": "Tierney Cyren <hello@bnb.im> (http://bnb.im)",
+  "author": "Sebastien Barre (http://barre.io)",
   "license": "MIT",
-  "files": [
-    "bin/card.js",
-    "bin/output"
-  ],
-  "devDependencies": {
-    "boxen": "^2.1.0",
-    "chalk": "^2.4.1",
-    "standard": "^12.0.1"
+  "dependencies": {
+    "boxen": "^3.0.0",
+    "chalk": "^2.4.2"
   }
 }
